lib/libremidi/tests/corpus/Invalid/No Header Chunk/victoria.mid
<!DOCTYPE HTML PUBLIC "-//WebTechs//DTD Mozilla HTML//EN">
<HTML>
<HEAD>
<TITLE>The Music and Art of Garret Thomson </TITLE>
<META name="description" content="The music of Garret Thomson, in General MIDI file format at MIDIWORLD.">
<META name="keywords" content="midi, music, original compositions, new music, mid, gm, smf, general midi, sequence, composers, synthesizers, electronic music, midiworld, garret thomson">
</HEAD>
<BODY BGCOLOR="#000000" BACKGROUND="px/bg01g.gif" TEXT="#FFCC33" LINK="#FFDDA0" VLINK="#AFDDA0" ALINK="#804000">
<FONT FACE="ARIAL,HELVETICA"><FONT SIZE=4>
<P>
<A NAME="gart"> </A>

<A HREF="lt.htm"><IMG SRC="px/right.gif" BORDER=0 ALIGN=RIGHT></A>
<A HREF="comp-n-z.htm"><IMG SRC="px/mwi.gif" BORDER=0 ALIGN=RIGHT></A>
<A HREF="tt.htm"><IMG SRC="px/left.gif" BORDER=0 ALIGN=RIGHT></A>
 The Music and Art of Garret Thomson 
<HR>
<A HREF="http://www.cybertheque.fr/galerie/garret/"><IMG SRC="px/space2.jpg" ALIGN=RIGHT></A>

<TABLE  HEIGHT=365  BORDER=0><TD>
<FONT FACE="ARIAL,HELVETICA" SIZE=4>
<I>General MIDI Sequences :</I>
<P><BR>
<IMG SRC="px/spc1.gif"><IMG SRC="px/starc.gif"><A HREF="../cgibin/x.cgi/c-mid/gart/jam.mid"> Buttered Jam</A>
<P><BR>
<IMG SRC="px/spc1.gif"><IMG SRC="px/starb.gif"><A HREF="../cgibin/x.cgi/c-mid/gart/darkness.mid"> Darkness</A>
<P><BR>
<IMG SRC="px/spc1.gif"><IMG SRC="px/starx.gif"><A HREF="../cgibin/x.cgi/c-mid/gart/demonics.mid">Demonics</A>
<P><BR>
<IMG SRC="px/spc1.gif"><IMG SRC="px/starc.gif"><A HREF="../cgibin/x.cgi/c-mid/gart/stepup.mid"> Stepup</A> 
<P><BR><FONT SIZE=2> <B>
Visit Garret Thomson's home page at : <BR>
<A HREF="http://www.cybertheque.fr/galerie/garret/">http://www.cybertheque.fr/galerie/garret/</A>
</TABLE>
<HR>
<FONT SIZE=1><B>
Music ©1996 <A HREF="mailto:gart@terraport.net"><I>Garret Thomson </I></A>
<IMG SRC="px/spc1.gif">
Artwork©1996 <A HREF="mailto:gart@terraport.net"><I> Garret Thomson</I></A>
<IMG SRC="px/spc1.gif">
Design©1996-98 <A HREF="http://midiworld.com/mw_cont.htm"><I>MIDIWORLD</I></A></B>
<BR>
<HR>



<CENTER>
<!--BEGIN COUNTER---------------------------------->
<BR>
<TABLE CELLSPACING="0" CELLPADDING="2" BORDER="1"><TR><TD BGCOLOR="#004000" ALIGN="CENTER" VALIGN="TOP">
<FONT FACE="ARIAL,HELVETICA"><FONT SIZE="1"><FONT COLOR="#CC9933"><B>
 &nbsp; 
004511 visitors since August 22, 1998
</B></FONT></FONT></TD></TR></TABLE>

<!--END COUNTER---------------------------------->


</BODY>
</HTML>
